# rust-iced-fetch-bitcoin

./: ARCHITECTURE.md  Cargo.toml  MULTI_PAGE_ARCHITECTURE.md  README.md
src/: api.rs  app.rs  country.rs  http_client.rs  http_utils.rs  main.rs  message.rs  route.rs  state.rs
src/pages/: about_page.rs  bitcoin_page.rs  mod.rs  settings_page.rs
src/views/: about_view.rs  bitcoin_view.rs  mod.rs  navigation.rs  settings_view.rs
