[package]
name = "iced-fetch-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "image", "svg", "advanced"] }
reqwest = { version = "0.12.17", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["fs"] }
