[package]
name = "iced-fetch-bitcoin"
version = "0.2.0"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image", "svg", "advanced"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
